feat: 新增收款开关、数据迁移与半在线UUID模式
1. 新增SEMI_ONLINE UUID模式适配Geyser混合服务器
2. 实现玩家收款开关功能，支持开关/查询收款状态
3. 支持从XConomy和其他Vault经济插件迁移数据
4. 优化排行榜支持按日/周/月查询收入排行
5. 新增PayToggle命令与相关权限配置
6. 重构IncomeCommand与PayCommand为子命令处理器
7. 新增UUID映射表支持半在线模式玩家UUID匹配
8. 新增PlaceholderAPI相关收入占位符支持
9. 新增配置项支持Vault迁移模式